@@ -1,6 +1,9 @@
 2008-02-24 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/SDCCast.c (expandInlineFuncs): fixed bug 1875869
+	* src/SDCCglue.c (printIvalBitFields): fixed bug 1806631
+	* support/regression/tests/bitopcse.c: removed hc08 exception, see testfwk.h
+	* support/Util/MySystem.c (my_system): output errorcode when verbose
 
 2008-02-22 Philipp Klaus Krause <pkk AT spth.de>
 
